--- a/config.yaml
+++ b/config.yaml
@@ -13,9 +13,10 @@ nodes:
     role: worker
     disks:
       - size: 2
-#  - ip: 192.168.0.104
-#    disks:
-#      - size: 1
+  - ip: 10.0.0.4
+    role: worker
+    disks:
+      - size: 1
 #  - ip: 192.168.0.105
 #    disks:
 #      - size: 1
